--- a/PageObjectGeneratorTest/pom.xml
+++ b/PageObjectGeneratorTest/pom.xml
@@ -79,6 +79,11 @@
       <artifactId>guava</artifactId>
       <version>16.0.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.3.1</version>
+    </dependency>
     <!-- Xtend dependencies -->
     <dependency>
       <groupId>org.eclipse.xtend</groupId>
